--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p data-testid="currentDayOfTheWeek" class="day">Day: <b></b></p>
             <p data-testid="currentUTCTime" class="time">Time: <b></b></p>
             <a
-          href=""
+          href="https://github.com/Apex10A/HNG-zuri"
           class="github"
           data-testid="githubURL"
           >My Github Repository</a
